tests/should_fail/syntax_not_on_non_bool.nv
module main

// SHOULD FAIL: ! (not) applied to non-Bool
// parser: "Cannot use ! on non-boolean"
let x = 5
let y = !x
println(y)
